--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,7 +12,7 @@
         <p class="text-center">This application lists the current number of cases reported across the globe.</p>
 
         <div class="jumbotron">
-            <h1 class="display-4" th:text="${totalReportedCases}"></h1>
+            <h1 class="display-4" th:text="${totalReportedCasesToday}"></h1>
             <p class="lead">Total cases reported as of <strong>today.</strong> &#128549;</p>
             <hr class="my-4">
             <h1 class="display-4" th:text="${totalNewCases}"></h1>
@@ -24,13 +24,15 @@
             <tr>
                 <th>Country/Region</th>
                 <th>Province/State</th>
-                <th>TotalCases</th>
-                <th>Changes since last day</th>
+                <th>TotalCases(Yesterday)</th>
+                <th>TotalCases(Today)</th>
+                <th>Today New Cases</th>
             </tr>
             <tr th:each="coronaRecord : ${coronaRecords}">
                 <td th:text="${coronaRecord.country}"></td>
                 <td th:text="${coronaRecord.state}"></td>
-                <td th:text="${coronaRecord.locationTotalCases}">0</td>
+                <td th:text="${coronaRecord.locationTotalCasesYesterday}">0</td>
+                <td th:text="${coronaRecord.locationTotalCasesToday}">0</td>
                 <td th:text="${coronaRecord.diffFromPrevDay}">0</td>
             </tr>
         </table>
