--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,7 +13,7 @@
 
         <div class="jumbotron">
             <h1 class="display-4" th:text="${totalReportedCasesToday}"></h1>
-            <p class="lead">Total cases reported as of <strong>today.</strong> &#128549;</p>
+            <p class="lead">Total cases reported. &#128549;</p>
             <hr class="my-4">
             <h1 class="display-4" th:text="${totalNewCases}"></h1>
             <p class="lead">Total new cases reported since <strong>previous day.</strong> &#128549;</p>
